--- a/src/lambda/decode-verify-jwt/package.json
+++ b/src/lambda/decode-verify-jwt/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && webpack"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,8 @@
     "jwk-to-pem": "^2.0.4"
   },
   "devDependencies": {
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
