removed cognito IdP from login UI

--- a/template.yaml
+++ b/template.yaml
@@ -825,8 +825,8 @@ Resources:
       GenerateSecret: false
       UserPoolId: !Ref UserPool
       SupportedIdentityProviders:
-        - COGNITO
         - !Ref UserPoolIdentityProvider
+        # - COGNITO        
       CallbackURLs:
         - !Sub "https://${DomainName}${LoginPageRelativePath}/"
         - !Sub "https://${DomainName}${LoginPageRelativePath}/redirect.html"
