--- a/template.yaml
+++ b/template.yaml
@@ -210,7 +210,7 @@ Resources:
               - HeaderName: Referer
                 HeaderValue: !Sub "${SecretReferer}"
           - Id: "ApiOrigin"
-            DomainName: !Sub "${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com"
+            DomainName: !Sub "${ApiGatewayApi}.execute-api.${AWS::Region}.amazonaws.com"
             OriginPath: !Sub "/Prod"
             CustomOriginConfig:
               HTTPPort: '80'
@@ -288,19 +288,20 @@ Resources:
           - PATCH
           - POST
           - PUT
-          DefaultTTL: 0
-          MaxTTL: 0
-          MinTTL: 0
-          ForwardedValues:
-            QueryString: true
-            Headers:
-            - Access-Control-Request-Headers
-            - Access-Control-Request-Method
-            - Origin
-            - Authorization
-            # - Host APIG needs to use SNI
-            Cookies:
-              Forward: all
+          # DefaultTTL: 0
+          # MaxTTL: 0
+          # MinTTL: 0
+          # ForwardedValues:
+          #   QueryString: true
+          #   Headers:
+          #   - Access-Control-Request-Headers
+          #   - Access-Control-Request-Method
+          #   - Origin
+          #   - Authorization
+          #   # - Host APIG needs to use SNI
+          #   Cookies:
+          #     Forward: all
+          CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad # aws managed cache policy (Name: Managed-CachingDisabled).  see https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/using-managed-cache-policies.html          
           TargetOriginId: WebsiteBucketOrigin
           ViewerProtocolPolicy: https-only
           Compress: true
@@ -332,6 +333,7 @@ Resources:
             # - Host APIG needs to use SNI
             Cookies:
               Forward: all
+          # CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad # aws managed cache policy (Name: Managed-CachingDisabled).  see https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/using-managed-cache-policies.html          
           TargetOriginId: ApiOrigin
           ViewerProtocolPolicy: https-only
           Compress: true
@@ -371,7 +373,7 @@ Resources:
               - HeaderName: Referer
                 HeaderValue: !Sub "${SecretReferer}"
           - Id: "ApiOrigin"
-            DomainName: !Sub "${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com"
+            DomainName: !Sub "${ApiGatewayApi}.execute-api.${AWS::Region}.amazonaws.com"
             OriginPath: !Sub "/Prod"
             CustomOriginConfig:
               HTTPPort: '80'
@@ -806,12 +808,27 @@ Resources:
         ResourceRecords:
         - !Sub "${S3BucketForStagingWebsiteContent}.s3-website-${AWS::Region}.amazonaws.com"
 
+  ApiGatewayApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: Prod # TODO: make this a param
+      Cors:
+        AllowMethods: "'POST,GET,PUT,DELETE'"
+        AllowHeaders: "'*'"
+        AllowOrigin: "'*'"    
+      Auth:
+        Authorizers:
+          CognitoUserPoolAuth:
+            UserPoolArn: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/${UserPool}"
+            Identity:
+              Header: Authorization        
+
   HttpApiFunction:
     Type: AWS::Serverless::Function
     Properties:
       InlineCode: |
          exports.handler = async (event) => {
-          console.log("Hello from MyAuthFunction")
+          console.log("Hello from HttpApiFunction")
            return {
            statusCode: 200,
            body: JSON.stringify(event),
@@ -826,6 +843,9 @@ Resources:
           Properties:
             Path: "{proxy+}"
             Method: ANY
+            RestApiId: !Ref ApiGatewayApi
+            Auth:
+              Authorizer: CognitoUserPoolAuth
 
   AutomationUser:
     Type: AWS::IAM::User
@@ -1018,7 +1038,7 @@ Outputs:
     Value: !Sub "https://www.${DomainName}"
   ApiURL:
     Description: "API endpoint URL for Prod environment"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod"
+    Value: !Sub "https://${ApiGatewayApi}.execute-api.${AWS::Region}.amazonaws.com/Prod"
   RoleId:
     Description: The logical ID of the IAM role
     Value: !Ref AutomationRole
