removed secret key

--- a/frontend/public/login/config.json
+++ b/frontend/public/login/config.json
@@ -110,7 +110,7 @@
     },
     {
         "OutputKey": "SecretKey",
-        "OutputValue": "bK5rCrcYb6zIjH3Yapny2I9rVwoGx55jCiAQL1dx",
+        "OutputValue": "OMITTED",
         "Description": "AWSSecretAccessKey of new user"
     },
     {
